objects/ASI_NPP_New_Product_Promotion__c.object
<CustomObject>
    <fields>
        <fullName>ASI_NPP_New_Promotion__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>New Promotion</label>
        <referenceTo>ASI_NPP_New_Promotion__c</referenceTo>
        <relationshipLabel>New Product / Promotion</relationshipLabel>
        <relationshipName>New_Product_Promotion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_No_of_Bottles_Per_Case__c</fullName>
        <label>No. of Bottles Per Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Objective__c</fullName>
        <label>Objective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Other_Consumer_A_P__c</fullName>
        <formula>-1 * (ASI_NPP_Event__c +  ASI_NPP_Special_Packing__c +  ASI_NPP_Others_please_indicate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Consumer A&amp;P</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Others_Detail__c</fullName>
        <label>(Others Detail)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Others_please_indicate__c</fullName>
        <label>- Others</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_PO_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO Number</label>
        <referenceTo>ASI_MFM_PO__c</referenceTo>
        <relationshipLabel>New Product / Promotion</relationshipLabel>
        <relationshipName>New_Product_Promotion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_PO_Raised_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PO Raised Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_PRISMA_Detail__c</fullName>
        <label>PRISMA Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_PRISMA_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PRISMA Description</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Prisma Code is not active</errorMessage>
            <filterItems>
                <field>ASI_NPP_PRISMA_code__c.ASI_NPP_Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_NPP_PRISMA_code__c</referenceTo>
        <relationshipLabel>New Product / Promotion</relationshipLabel>
        <relationshipName>New_Product_Promotion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_PRS_to_Saler_Offtrade_Proposed__c</fullName>
        <formula>ASI_NPP_Saler_to_On_Trade_Offtrade_RSP_P__c -  ASI_NPP_Wholesaler_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PRS to Customer - Proposed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_PRS_to_Wholesaler_Offtrade__c</fullName>
        <label>PRS to Customer (Importer/ Wholesaler)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_P_L_Remarks__c</fullName>
        <label>P&amp;L Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Packing_Size_Per_Bottle__c</fullName>
        <label>Packing Size Per Bottle (cl)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Percent_Contribution_Margin__c</fullName>
        <label>Contribution Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Percent_of_A_P_Expenses__c</fullName>
        <label>A&amp;P Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Percent_of_CAAP__c</fullName>
        <label>CAAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Percent_of_Cost_of_Sales__c</fullName>
        <label>Cost of Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Percent_of_Net_Sales__c</fullName>
        <label>Net Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Percentage_of_Alcohol__c</fullName>
        <label>% of Alcohol</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Period_of_Sales_From__c</fullName>
        <label>Start Date of Sales / Promotion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Period_of_Sales_To__c</fullName>
        <label>End Day of Sales  / Promotion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Period_of_Sales__c</fullName>
        <label>Period of Sales</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One-shot</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>Period</fullName>
                </value>
                <value>
                    <fullName>Permanent</fullName>
                </value>
                <value>
                    <fullName>Temporary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPP_Price_Discount_Value_Total__c</fullName>
        <formula>-1 * (ASI_NPP_9LC_conversion__c*900/ASI_NPP_Packing_Size_Per_Bottle__c)* ASI_NPP_Price_Discount_Value_per_BT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Discount Value Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Price_Discount_Value_per_BT__c</fullName>
        <label>Price Discount Value per Bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Priority_Level__c</fullName>
        <inlineHelpText>Strategic: If this item is for a longer-term investment (e.g., Martell NCF)

Tactical: If this item is for a short-term investment (e.g., PJ VAP)</inlineHelpText>
        <label>Priority Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Tactical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPP_Product_Launch__c</fullName>
        <label>- Product Launch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Prompt_Payment_Discount__c</fullName>
        <label>Prompt Payment Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Prompt_Payment_to_Wholesaler__c</fullName>
        <formula>( 0 -  ASI_NPP_Target_Sales__c ) *  ASI_NPP_Selling_Price_9LC__c  *  ASI_NPP_Prompt_Payment_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prompt Payment to Wholesaler</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Quantity_annual__c</fullName>
        <label>Quantity (Annual) (Actual)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Reason_for_Pricing_Structure__c</fullName>
        <label>Reason for Pricing Structure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Reason_of_Assessment__c</fullName>
        <label>Reason of Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Replacement</fullName>
                </value>
                <value>
                    <fullName>Product Addition</fullName>
                </value>
                <value>
                    <fullName>Product Delist</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPP_Rebate__c</fullName>
        <label>Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Reporting_Currency__c</fullName>
        <label>Reporting Currency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_NPP_Market_Currency__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPP_SKU__c</fullName>
        <label>SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Saler_to_On_Trade_Offtrade_Curr__c</fullName>
        <label>Wholesaler to On Trade/Offtrade RSP - C</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Saler_to_On_Trade_Offtrade_RSP_P__c</fullName>
        <label>Wholesaler to On Trade/Offtrade RSP - P</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Sales_Forecast_by_Channel__c</fullName>
        <label>Sales Forecast by Channel</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Sell_in_Date_PRS_to_WS__c</fullName>
        <label>Sell-in Date PRS to WS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Selling_Price_9LC__c</fullName>
        <formula>ASI_NPP_PRS_to_Wholesaler_Offtrade__c *  ASI_NPP_No_of_Bottles_Per_Case__c * (900/ (ASI_NPP_Packing_Size_Per_Bottle__c * ASI_NPP_No_of_Bottles_Per_Case__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selling Price / 9LC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Shipment_BO__c</fullName>
        <label>Shipment BO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Size_Single__c</fullName>
        <label>Size (cl)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>37.5</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>175</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>250</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                </value>
                <value>
                    <fullName>450</fullName>
                </value>
                <value>
                    <fullName>900</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPP_Size__c</fullName>
        <label>Size</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5cl</fullName>
                </value>
                <value>
                    <fullName>20cl</fullName>
                </value>
                <value>
                    <fullName>35ml</fullName>
                </value>
                <value>
                    <fullName>200ml</fullName>
                </value>
                <value>
                    <fullName>300ml</fullName>
                </value>
                <value>
                    <fullName>375ml</fullName>
                </value>
                <value>
                    <fullName>500ml</fullName>
                </value>
                <value>
                    <fullName>1L</fullName>
                </value>
                <value>
                    <fullName>1.5L</fullName>
                </value>
                <value>
                    <fullName>1.75L</fullName>
                </value>
                <value>
                    <fullName>2L</fullName>
                </value>
                <value>
                    <fullName>2.5L</fullName>
                </value>
                <value>
                    <fullName>3L</fullName>
                </value>
                <value>
                    <fullName>4.5L</fullName>
                </value>
                <value>
                    <fullName>700ml</fullName>
                </value>
                <value>
                    <fullName>750ml</fullName>
                </value>
                <value>
                    <fullName>9L</fullName>
                </value>
                <value>
                    <fullName>30cl</fullName>
                </value>
                <value>
                    <fullName>35cl</fullName>
                </value>
                <value>
                    <fullName>37.5cl</fullName>
                </value>
                <value>
                    <fullName>50cl</fullName>
                </value>
                <value>
                    <fullName>70cl</fullName>
                </value>
                <value>
                    <fullName>75cl</fullName>
                </value>
                <value>
                    <fullName>100cl</fullName>
                </value>
                <value>
                    <fullName>150cl</fullName>
                </value>
                <value>
                    <fullName>175cl</fullName>
                </value>
                <value>
                    <fullName>200cl</fullName>
                </value>
                <value>
                    <fullName>250cl</fullName>
                </value>
                <value>
                    <fullName>300cl</fullName>
                </value>
                <value>
                    <fullName>450cl</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPP_Special_Packing__c</fullName>
        <label>- Special Packing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Special_Shipping_Handling__c</fullName>
        <label>- Special Shipping / Handling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Sponsorship__c</fullName>
        <label>- Sponsorship</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Start_Launch_Date__c</fullName>
        <label>Start / Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Sub_Brand_Type__c</fullName>
        <label>Sub-Brand Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PR Sub-Brand</fullName>
                    <default>true</default>
                    <label>PR Sub-Brand</label>
                </value>
                <value>
                    <fullName>Innovation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPP_Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Super Premium</fullName>
                </value>
                <value>
                    <fullName>Ultra Premium</fullName>
                </value>
                <value>
                    <fullName>Prestige</fullName>
                </value>
                <value>
                    <fullName>Ultra Prestige</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPP_Sub_Channel__c</fullName>
        <label>Sub Channel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>ASI_NPP_Channel__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Dance Club</fullName>
                </value>
                <value>
                    <fullName>Traditional Pub</fullName>
                </value>
                <value>
                    <fullName>Bistro Bar</fullName>
                </value>
                <value>
                    <fullName>Western Pub</fullName>
                </value>
                <value>
                    <fullName>Cocktail Bar</fullName>
                </value>
                <value>
                    <fullName>Asian MOT</fullName>
                </value>
                <value>
                    <fullName>Modern Bar</fullName>
                </value>
                <value>
                    <fullName>Casual Dines</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Asian Rest.</fullName>
                </value>
                <value>
                    <fullName>Western Rest.</fullName>
                </value>
                <value>
                    <fullName>Premium Night Club</fullName>
                </value>
                <value>
                    <fullName>KTV with hostesses</fullName>
                </value>
                <value>
                    <fullName>Jap/Korean Lounge</fullName>
                </value>
                <value>
                    <fullName>Traditional Bar</fullName>
                </value>
                <value>
                    <fullName>Asian TOT</fullName>
                </value>
                <value>
                    <fullName>Social Club</fullName>
                </value>
                <value>
                    <fullName>Family KTV</fullName>
                </value>
                <value>
                    <fullName>Supermarket</fullName>
                </value>
                <value>
                    <fullName>Convenience Store</fullName>
                </value>
                <value>
                    <fullName>Sundry Shop</fullName>
                </value>
                <value>
                    <fullName>Wine Shop</fullName>
                </value>
                <value>
                    <fullName>Private Sales (HNWIs)</fullName>
                </value>
                <value>
                    <fullName>Corporate Sales</fullName>
                </value>
                <value>
                    <fullName>E-commerce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPP_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>New Product / Promotion</relationshipLabel>
        <relationshipName>ASI_NPP_New_Products_Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Target_Forecast_vs_Sub_Brands__c</fullName>
        <formula>ASI_NPP_9LC_conversion__c /  ASI_NPP_Volume_Sub_Brands_Per_Annum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Target Forecast vs. Sub Brands</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Target_Measurement__c</fullName>
        <label>Target Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>9LC</fullName>
                </value>
                <value>
                    <fullName>Actual Case</fullName>
                </value>
                <value>
                    <fullName>Bottles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPP_Target_Sales__c</fullName>
        <formula>ASI_NPP_9LC_conversion__c -  ASI_NPP_Free_Goods__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Target_vs_Sub_Brands_Per_Annum__c</fullName>
        <formula>ASI_NPP_9LC_conversion__c /  ASI_NPP_Volume_Sub_Brands_Per_Annum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Volume vs. Sub Brands (Per Annum)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Total_A_P_Expenses__c</fullName>
        <formula>ASI_NPP_Trade_A_P__c + ASI_NPP_Media_Total_Formula__c + ASI_NPP_Other_Consumer_A_P__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total A&amp;P Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Total_Allowances_Discounts__c</fullName>
        <label>Total Allowances &amp; Discounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Total_VAP_Cost__c</fullName>
        <formula>(ASI_NPP_Brand_Company_VAP__c + ASI_NPP_Local__c ) * ASI_NPP_9LC_conversion__c* 900 /  ASI_NPP_Packing_Size_Per_Bottle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total VAP Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Trade_A_P__c</fullName>
        <formula>-1 * (ASI_NPP_Product_Launch__c +  ASI_NPP_Sponsorship__c +  ASI_NPP_Special_Shipping_Handling__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trade A&amp;P</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Trade_Deal_Offer_Current__c</fullName>
        <label>Trade Deal Offer - Current</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Trading_Term_Supermarket_only__c</fullName>
        <formula>IF(OR(ISPICKVAL( ASI_NPP_Distribution_Channel__c ,&quot;Offtrade - Supermarket&quot;),ISPICKVAL( ASI_NPP_Distribution_Channel__c, &quot;Offtrade&quot;)),&quot;11.35%&quot;,&quot;na&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trading Term - (Supermarket only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Trading_terms_Supermarkets__c</fullName>
        <formula>( 0 -  ASI_NPP_Target_Sales__c  ) * ASI_NPP_Selling_Price_9LC__c *  IF(ASI_NPP_Trading_Term_Supermarket_only__c = &apos;na&apos;, 0,0.1135 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trading terms (Supermarkets)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_VAP_Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>AOA</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AMD</fullName>
                </value>
                <value>
                    <fullName>AZN</fullName>
                </value>
                <value>
                    <fullName>BYR</fullName>
                </value>
                <value>
                    <fullName>BAM</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>BGN</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>HRK</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>DOP</fullName>
                </value>
                <value>
                    <fullName>FJD</fullName>
                </value>
                <value>
                    <fullName>GEL</fullName>
                </value>
                <value>
                    <fullName>GHS</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>IDR </fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPP_VAP_Exchange_Rate__c</fullName>
        <label>Exchange Rate to SGD</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_VAP_conversion_to_SGD__c</fullName>
        <formula>ASI_NPP_Brand_Company_VAP__c *    ASI_NPP_VAP_Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Company - VAP conversion to SGD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Value_Added_Pack_in_details__c</fullName>
        <label>Value Added Pack in details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Volume_Sub_Brands_Per_Annum__c</fullName>
        <label>Volume - Sub Brands (Per Annum)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Wholesaler_Margin__c</fullName>
        <label>Wholesaler Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Wholesaler_to_On_Trade__c</fullName>
        <label>Wholesaler to On Trade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>New Product / Promotion</label>
    <listViews>
        <fullName>ASI_NPP_All_NPP</fullName>
        <columns>NAME</columns>
        <columns>ASI_NPP_status__c</columns>
        <columns>ASI_NPP_Product__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>ASI_NPP_Brand_Owner__c</columns>
        <columns>ASI_NPP_Brand__c</columns>
        <columns>ASI_NPP_SKU__c</columns>
        <columns>ASI_NPP_Launch_Date__c</columns>
        <columns>ASI_NPP_Quantity_annual__c</columns>
        <columns>ASI_NPP_Period_of_Sales_From__c</columns>
        <columns>ASI_NPP_Period_of_Sales_To__c</columns>
        <columns>ASI_NPP_Channel__c</columns>
        <columns>ASI_NPP_Delivery_ETA_Date_in_SGP__c</columns>
        <columns>ASI_NPP_Sell_in_Date_PRS_to_WS__c</columns>
        <columns>ASI_NPP_Brand_Company_Allocation_Check__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_NPP_New_Product_Promotion__c.ASI_NPP_SG_New_Product_or_Promotion</value>
        </filters>
        <label>All New Production / Promotion</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_NPP_SG_All_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_NPP_My_NPL</fullName>
        <columns>NAME</columns>
        <columns>ASI_NPP_status__c</columns>
        <columns>ASI_NPP_Brand_Owner__c</columns>
        <columns>ASI_NPP_Brand__c</columns>
        <columns>ASI_NPP_Product__c</columns>
        <columns>ASI_NPP_SKU__c</columns>
        <columns>ASI_NPP_Quantity_annual__c</columns>
        <columns>ASI_NPP_Period_of_Sales_From__c</columns>
        <columns>ASI_NPP_Period_of_Sales_To__c</columns>
        <columns>ASI_NPP_Channel__c</columns>
        <columns>ASI_NPP_Delivery_ETA_Date_in_SGP__c</columns>
        <columns>ASI_NPP_Sell_in_Date_PRS_to_WS__c</columns>
        <columns>ASI_NPP_Launch_Date__c</columns>
        <columns>ASI_NPP_Brand_Company_Allocation_Check__c</columns>
        <filterScope>Mine</filterScope>
        <label>My New Product / Promotion</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_NPP_SG_All_User</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New Product / Promotion</pluralLabel>
    <recordTypes>
        <fullName>ASI_NPP_SG_New_Product_or_Promotion</fullName>
        <active>true</active>
        <label>SG New Product or Promotion</label>
    </recordTypes>
</CustomObject>